--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "makercli",
+  "name": "gomaker",
   "version": "1.0.0",
   "description": "<div style=\"text-align:center\">\r     <img src=\"maker.svg\" height=\"193\" width=\"210\" alt=\"logo\">\r </div>",
   "main": "index.js",
